--- a/AliEx/my-app/src/app/category-products/category-products.component.html
+++ b/AliEx/my-app/src/app/category-products/category-products.component.html
@@ -1,7 +1,7 @@
 <h2>{{category.name}}</h2>
 <div class="grid grid-pad">
   <button (click)="back()">Back</button>
-  <a *ngFor="let product of category.products, let i = index" class="col-1-4"
+  <a *ngFor="let product of category.products, let i = index"
      routerLink="/categories/{{category.id-1}}/products/{{product.id}}">
     <div class="module hero">
       <h2>{{i+1}}. {{product.name}}</h2>
