--- a/AliEx/my-app/src/app/dashboard/dashboard.component.css
+++ b/AliEx/my-app/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,11 @@
-/* DashboardComponent's private CSS styles */
 .main{
+  margin-top: 25px;
   display: flex;
+  flex-direction: row;
+  /*align-content: center;*/
+}
+.item{
+  margin-right: 120px;
 }
 a {
   text-decoration: none;
@@ -8,6 +13,7 @@ a {
 h3 {
   text-align: center;
   margin-bottom: 0;
+  padding: 0;
 }
 h4 {
   position: relative;
