--- a/AliEx/my-app/src/app/dashboard/dashboard.component.css
+++ b/AliEx/my-app/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,8 @@
 .main{
   margin-top: 25px;
   display: flex;
-  flex-direction: row;
-  /*align-content: center;*/
+  justify-content: center;
+  align-items: center;
 }
 .item{
   margin-right: 120px;
