--- a/Project/src/app/app.component.css
+++ b/Project/src/app/app.component.css
@@ -1,4 +1,14 @@
+#titlePull{
+  text-align: center;
+  color: darkred;
+  padding: 0;
+  font-size: 200%;
+  margin: 0;
+  font-family: "Times New Roman";
+}
 nav{
+  margin: 0;
+  padding: 0;
   display: flex;
   width: initial;
 }
@@ -27,6 +37,7 @@ nav{
   display: inline-block;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: "Times New Roman";
 }
 #categories_dropdown{
   padding-left: 16px;
@@ -43,7 +54,7 @@ nav{
 }
 #nav_list li a, #nav_list_sign li a{
   font-size: 20px;
-  color: white;
+  color: black;
 }
 #categories_dropdown li{
   margin-bottom: 10px;
