--- a/Project/src/app/app.component.html
+++ b/Project/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1 id="titlePull">Pull && Bear</h1>
 <nav>
   <ul id="nav_list" >
     <li><a routerLink="/forall" (mouseenter)="mouseLeave()">For All</a>|</li>
