--- a/Project/src/app/for-all-categories/for-all-categories.component.css
+++ b/Project/src/app/for-all-categories/for-all-categories.component.css
@@ -3,9 +3,11 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-img{
-  width: 200px;
-  height: 200px;
+#prod_img{
+  max-width: 100%;
+  max-height: 70%;
+  min-width: 100%;
+  min-height: 70%;
 }
 /* DashboardComponent's private CSS styles */
 [class*='col-'] {
@@ -41,8 +43,10 @@ h4 {
   padding: 20px;
   text-align: center;
   color: #eee;
-  max-height: 120px;
-  min-width: 120px;
+  height: 100%;
+  max-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   border-radius: 2px;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -55,16 +59,18 @@ h4 {
 .grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
 }
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
   .module {
     font-size: 10px;
-    max-height: 75px; }
+    max-height: 100%;
+  }
 }
 @media (max-width: 1024px) {
   .grid {
     margin: 0;
   }
   .module {
-    min-width: 60px;
+    min-width: 100%;
   }
 }
+
