--- a/Project/src/styles.css
+++ b/Project/src/styles.css
@@ -1,8 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 body{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background-image: url('assets/img_girl.jpg');
-  height: 100%;
+  /*height: 100%;*/
+  min-height: 100%;
+  max-height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
