--- a/ProjectV3/src/app/for-man-categories/for-man-categories.component.css
+++ b/ProjectV3/src/app/for-man-categories/for-man-categories.component.css
@@ -1,4 +1,9 @@
+.body{
+  display: flex;
+  flex-direction: column;
+}
 .grid-pad{
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -73,4 +78,8 @@ h4 {
     min-width: 100%;
   }
 }
-
+app-logged-status{
+  float: right;
+  font-size: 2em;
+  color: black;
+}
