--- a/ProjectV3/src/app/for-woman-categories/for-woman-categories.component.css
+++ b/ProjectV3/src/app/for-woman-categories/for-woman-categories.component.css
@@ -1,4 +1,5 @@
 .grid-pad{
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -73,4 +74,8 @@ h4 {
     min-width: 100%;
   }
 }
-
+app-logged-status{
+  float: right;
+  font-size: 2em;
+  color: black;
+}
