--- a/ProjectV3/src/app/for-woman-categories/for-woman-categories.component.html
+++ b/ProjectV3/src/app/for-woman-categories/for-woman-categories.component.html
@@ -1,3 +1,4 @@
+<app-logged-status></app-logged-status>
 <div class="grid-pad">
   <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
     <div class="module hero">
