--- a/ProjectV3/src/app/view-product/view-product.component.css
+++ b/ProjectV3/src/app/view-product/view-product.component.css
@@ -1,4 +1,6 @@
+
 #main{
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -150,5 +152,10 @@
   border: 1px solid rgba(255,255,255,.1);
   padding: 0 15px;
   border-radius: 2px;
+  color: black;
+}
+app-logged-status{
+  float: right;
+  font-size: 2em;
   color: black;
 }
