--- a/ProjectV3/src/app/view-products/view-products.component.html
+++ b/ProjectV3/src/app/view-products/view-products.component.html
@@ -1,3 +1,5 @@
+<app-logged-status></app-logged-status>
+
 <div class="grid-pad" *ngIf="products">
 
   <div class="col-1-4" *ngFor="let product of products">
