--- a/ProjectV3/src/app/bottom-navigation/bottom-navigation.component.html
+++ b/ProjectV3/src/app/bottom-navigation/bottom-navigation.component.html
@@ -2,19 +2,19 @@
   <hr style="border-width:3px;" style="border-style: inset;">
   <div class="bottomMain">
     <div >
-      <p>Наш адрес : </p>
-      <p>Казахстан, город Кызылорда, дачный поселок "Ягодка" </p>
+      <p>Our Address </p>
+      <p>Kazakhstan, region Almaty, Tole bi district 59 </p>
     </div>
     <div >
-      <p>Свяжитесь с нами по телефону : </p>
-      <p>8-702-658-59-60;8-72-42-22-16-04 или же по email адресу : hochuotdyh.orda@gmail.com</p>
+      <p>Contact us on :</p>
+      <p>8-702-658-59-60;8-72-42-22-16-04 or with email address : hochuotdyh.orda@gmail.com</p>
     </div>
     <div >
-      <p>Маршруты : </p>
-      <p> Переходите по <a href="">ссылке</a> что бы узнать маршрут </p>
+      <p>How to get : </p>
+      <p> Go through <a href="">link</a> to open </p>
     </div>
   </div>
   <div class="bottomMain">
-    <p>Copyright © 2017-2022 Все права защищены. Полное или частичное копирование материалов допускается только при обязательной установке активной гиперссылки на сайт. </p>
+    <p>Copyright © 2017-2022 All rights reserved. Full or partial copying of materials is allowed only with the obligatory installation of an active hyperlink to the site. </p>
   </div>
 </div>
