--- a/ProjectV3/src/app/product-edit/product-edit.component.css
+++ b/ProjectV3/src/app/product-edit/product-edit.component.css
@@ -1,48 +1,41 @@
-.main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.buttons{
-  float: right;
-}
 app-logged-status{
+  float: right;
   font-size: 2em;
   color: black;
 }
-#title{
-  width: 100%;
-  font-size: 2em;
-}
-.likedList{
+.main{
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
 }
-.listItem{
-  width: 22%;
-  padding: 20px;
-  margin: 20px;
-  text-align: center;
-  color: #eee;
-  height: 100%;
-  max-height: 100%;
-  min-width: 22%;
-  max-width: 22%;
-  min-height: 100%;
-  border-radius: 2px;
-  background-color: rgba(0, 0, 0, 0.5);
+.title{
+  width: 50%;
+  height: 20%;
+  border-radius: 25px;
+  background-color: rgba(0,0,0,0.4);
+  color: white;
+  font-size: 2em;
+  font-weight: bolder;
+  margin-bottom: 5px;
 }
-.listItem img{
-  width: 100%;
-  height: 100%;
-  max-height: 100%;
-  max-width: 100%;
-  min-height: 100%;
-  min-width: 100%;
+.prodName{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
+}
+.prodDescription{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
+}
+.prodPrice{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 60%;
 }
 .button{
   width: 200px;
@@ -62,15 +55,21 @@ app-logged-status{
 .inputModel{
   border-radius: 5px;
   border-color: black;
-  width: 15%;
+  width: 100%;
   height: 40px;
   font-size: 1em;
   font-family: "Times New Roman";
+  margin-bottom: 20px;
 }
 .inputModel:active{
+  width: 100%;
   background-color: black;
   color: #eeeeee;
 }
 .inputModel:hover{
+  width: 100%;
   font-size: 2em;
+}
+.inputModel:focus{
+  width: 100%;
 }
