--- a/ProjectV3/src/app/view-product/view-product.component.css
+++ b/ProjectV3/src/app/view-product/view-product.component.css
@@ -1,4 +1,3 @@
-
 #main{
   width: 100%;
   display: flex;
@@ -159,3 +158,12 @@ app-logged-status{
   font-size: 2em;
   color: black;
 }
+.button{
+  border-radius: 10px;
+  color: #eeeeee;
+  background-color: rgba(85, 101, 164, 0.5);
+}
+.button:hover{
+  background-color: rgba(85, 101, 164, 1);
+}
+
