Auth, back-front, comment, like, buy, login, logout, profile

--- a/ProjectV3/src/app/logged-status/logged-status.component.html
+++ b/ProjectV3/src/app/logged-status/logged-status.component.html
@@ -1,5 +1,5 @@
 <p *ngIf="activeUser" class="text">Welcome
-  <a id="profile" routerLink="/profile">{{activeUser.login}} </a>
+  <a id="profile" routerLink="/profile">{{activeUser}} </a>
   ! |
   <a *ngIf="admin" routerLink="/admin"> Go to Admin Page |</a>
   <a *ngIf="admin" routerLink="/forall"> Go to Products Page |</a>
