--- a/ProjectV3/src/app/view-product/view-product.component.html
+++ b/ProjectV3/src/app/view-product/view-product.component.html
@@ -32,9 +32,9 @@
 
   <h1 >Comments: </h1>
 
-  <div class="comments" *ngIf="product.comments">
+  <div class="comments" *ngIf="comments">
 
-    <div class="col-1-4" *ngFor="let comment of product.comments">
+    <div class="col-1-4" *ngFor="let comment of comments">
 
       <div class="comment">
         <h2>{{comment.userName}}:</h2>
@@ -47,8 +47,6 @@
   <div class="addComment">
     <div class="form" >
       <h1>Leave a comment:</h1>
-
-      <input type="text" placeholder="Your name" id="userName">
 
       <textarea id="bodyCom" placeholder="Your Comment"></textarea>
 
